# personal-automation-api

./: .env.example  .gitignore  AI Systems for Accessibility.md  Dockerfile  It's Been A While.md  Megan Thee Stallion’s VAG1NA Monologues- "Megan" analysis.md  README.md  RouteLLM achieves 95% GPT4o Quality AND 85% CHEAPER.md  ZERO Cost AI Agents: Are ELMs ready for your prompts? (Llama3, Ollama, Promptfoo, BUN).md  api.py  app.py  docker-compose.yml  iOS 18 - This Was Unexpected!.md  my-template.xml  pyproject.toml  run.sh  streamlit.py
.github/workflows/: ci-cd.yml  deploy.yml
app/: api.py  config.py  main.py  models.py  prompts.py  services.py  utils.py
