[tool.poetry]
name = "youtube-summarizer"
version = "0.1.0"
description = "A Streamlit app to summarize YouTube videos using OpenAI GPT-4"
authors = ["Dylan Isaac <dylan@dylansheffer.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
openai = "^0.27.0"
youtube-transcript-api = "^0.4.4"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-fasthtml = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
