[tool.poetry]
name = "personal-automation-api"
version = "0.1.0"
description = "Personal REST API for home automations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.15.0"
python-dotenv = "^1.0.0"
httpx = "^0.23.0"
openai = "^0.27.0"
youtube-transcript-api = "^0.4.4"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100